<resources>
    <string name="app_name">ICT4D News</string>
    <string name="nav_news">News</string>
    <string name="nav_ict4dat" translatable="false">ICT4D.at</string>
    <string name="nav_ict4d" translatable="false">ICT4D</string>
    <string name="nav_more">More</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="ict4d_at_wikipedia">Continue reading on Wikipedia</string>
    <string name="ict4d_at_logo">ICT4D.at logo</string>
    <string name="news_detail_share">%1$s\n\nby %2$s - %3$s\n\n%4$s</string>
    <string name="open_in_browser">Open in a Browser</string>
    <string name="description_ict4d">Information and Communication Technologies for Development (ICT4D)
        refers to the application of information and communication technologies (ICT) toward social, economic, and
        political development, with a particular emphasis on helping poor and marginalized people and communities. It
        aims to help in international development by bridging the digital divide and providing equitable access to
        technologies. ICT4D is grounded in the notions of "development", "growth", "progress" and "globalization" and is
        often interpreted as the use of technology to deliver a greater good. Another similar term used in the
        literature is "digital development". ICT4D draws on theories and frameworks from many disciplines, including
        sociology, economics, development studies, library, information science, and communication
        studies.\n\n-Wikipedia
    </string>
    <string name="ict4dat_vision">A World of Equal Opportunities for All\n\nOur Mission:\nThrough knowledge,
        tools and networks we empower people to develop the skills they need to achieve their full potential.\n\nOur
        Core Values:\n\u2022 Community\n\u2022 Interdisciplinary &amp; Co-creation\n\u2022 Respect &amp;
        Tolerance\n\u2022 Honesty &amp; Trust\n\u2022 Passion &amp; Creativity\n
    </string>
    <string name="ict4dat_projects">Our Projects</string>
    <string name="ict4dat_about">About us &amp; Members</string>
    <string name="open_source_licences_title">Open Source Licences</string>
    <string name="share">Share</string>
    <string name="share_ict4d">ICT4D - Information and Communication Technologies for
        Development\n\n%1$s
    </string>
    <string name="share_ict4dat">ICT4D.at - The Austrian Network for Information and Communication Technologies for
        Development\n\n%1$s
    </string>
    <string name="read_more">Read more</string>
    <string name="blog_logo">Blog logo</string>
    <string name="ict4d_blogs_and_sources">ICT4D Blogs &amp; Sources</string>
    <string name="contextual_selection">%d/%d blogs chosen</string>
    <string name="about_developers">This Open Source Android application was developed with Love by the NGO ICT4D.at and
        the following main developers and designers:
    </string>
    <string name="rate_application">Rate this application</string>
    <string name="share_application">Share this application</string>
    <string name="contact_us">Contact us</string>
    <string name="github_project">Open Github Project</string>
    <string name="software_developer">Software Developer</string>
    <string name="designer">Designer</string>
    <string name="contact_mail_subject">ICT4D.at Android News App</string>
    <string name="contact_mail_text">Dear ICT4D.at,\n\n</string>
    <string name="share_app_text">Hi,\nI am using ICT4D.at\'s Android ICT4D-News App. You can download it from here:\n\n
        %1$s
    </string>
    <string name="headline_more">With %1$s from ICT4D.at</string>
    <string name="ict4d_headline">What is ICT4D?</string>
    <string name="settings">Settings</string>
    <string name="app_version">Information</string>
    <string name="new_news_badge">New News</string>
    <string name="connecting_text">Connecting to News %1$d/%2$d:\n%3$s</string>
    <string name="no_blog_found">No ICT4D News found</string>
    <string name="notification_channel_name">ICT4D News Notifications</string>
    <string name="notification_channel_description">Notifications of the ICT4D News application to keep you up with
        changes within our application.
    </string>
    <string name="news_update_complete">ICT4D News Update</string>
    <string name="news_update_notification_content_text">%1$d new article/s available, read them now.</string>
    <string name="current_app_version">Version</string>
    <string name="should_allow_sync_service">Automatic Updates</string>
    <string name="should_allow_snyc_service_summary">Automatic updates will run in the background and downloads the latest ICT4D news.</string>
    <string name="settings_category_general">General Settings</string>
    <string name="settings_bug_tracking_title">Bug-Tracking</string>
    <string name="settings_bug_tracking_summary">We use a monitoring tool to track bugs. We do not collect any personal data, but include device information.</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_msg">An unknown error occurred.</string>
    <string name="dialog_ok">OK</string>
    <string name="ownership_dialog_title">Ownership &amp; Publisher</string>
    <string name="ownership_dialog_message">This application brings together news sources on the topic of ICT4D.\n\nICT4D.at does not own nor is responsible for the content of other sources and providers. You can find all used sources in the section \"ICT4D Blogs &amp; Sources\" or on GitHub:\nhttps://github.com/ICT4Dat/ict4dat-news-android#supported-news-feeds-and-sources\n\nIf you are the owner of one oft the sources used by this application and would like to be removed or if you would like to propose a new source, then please contact us:\nnews.app@ict4d.at</string>
    <string name="content_description_scroll_to_top">Scroll to top</string>
    <string name="welcome_summary_welcome">Welcome to ICT4D News</string>
    <string name="welcome_summary_explaination">We handpicked %1$d ICT4D News Sources for you. We can keep you automatically up-to-date:</string>
    <string name="welcome_summary_setup">Set me up!</string>
    <string name="welcome_summary_configure_sources">Configure News Sources first</string>
    <string name="welcome_summary_disclaimer">The application can search daily for ICT4D news and display them as notifications. You can turn this on/off any time in the settings.</string>
    <string name="welcome_summary_skip">Skip automated updates</string>
    <string name="welcome_summary_done_text">We will keep you up-to-date. You can turn notifications on/off any time in the settings.</string>
    <string name="welcome_summary_done_headline">All done!</string>
    <string name="runtime_permission_notification_not_granted">Permission not granted – open settings to grant manually</string>
    <string name="runtime_permission_notification_open_settings">Open</string>
</resources>
